Changed Transmission to use a hard directory
Rather than using the ~ for the home directory, it is more consistent to just
give Transmission a full path. For now, the user who will have access to all
the data will be user download (/home/download).

--- a/web/transmission/transmission-daemon/settings.json
+++ b/web/transmission/transmission-daemon/settings.json
@@ -12,11 +12,11 @@
     "blocklist-url": "http://www.example.com/blocklist", 
     "cache-size-mb": 2, 
     "dht-enabled": true, 
-    "download-dir": "~/complete", 
+    "download-dir": "/home/download/complete", 
     "encryption": 1, 
     "idle-seeding-limit": 30, 
     "idle-seeding-limit-enabled": false, 
-    "incomplete-dir": "~/incomplete", 
+    "incomplete-dir": "/home/download/incomplete", 
     "incomplete-dir-enabled": true, 
     "lazy-bitfield-enabled": true, 
     "lpd-enabled": false, 
