Removed speed limits on Transmission (web)
For the web GNU/Linux servers, the download and upload speed limits in
Transmission has been removed. Cannot remember why these limits were being
enforced in the first place.

--- a/web/transmission/transmission-daemon/settings.json
+++ b/web/transmission/transmission-daemon/settings.json
@@ -45,10 +45,10 @@
     "rpc-whitelist-enabled": false, 
     "script-torrent-done-enabled": false, 
     "script-torrent-done-filename": "", 
-    "speed-limit-down": 750, 
-    "speed-limit-down-enabled": true, 
-    "speed-limit-up": 750, 
-    "speed-limit-up-enabled": true, 
+    "speed-limit-down": 7500, 
+    "speed-limit-down-enabled": false, 
+    "speed-limit-up": 7500, 
+    "speed-limit-up-enabled": false, 
     "start-added-torrents": true, 
     "trash-original-torrent-files": false, 
     "umask": 18, 
