Switched to open command for images on Mac OSX
On Mac OSX, in elinks, the config has been adjusted so that it calls the open
command instead of xzgv or sxiv. May need to fix other calls to these programs
in other config files.

--- a/macosx/elinks/_elinks/newsbeuter.conf
+++ b/macosx/elinks/_elinks/newsbeuter.conf
@@ -16,8 +16,8 @@ set mime.type.image.jpg = "image_viewer"
 set mime.type.image.jpeg = "image_viewer"
 set mime.type.image.gif = "image_viewer"
 set mime.type.image.png = "image_viewer"
-set mime.handler.image_viewer.unix.program = "sxiv %"
-set mime.handler.image_viewer.unix-xwin.program = "sxiv %"
+set mime.handler.image_viewer.unix.program = "open %"
+set mime.handler.image_viewer.unix-xwin.program = "open %"
 
 ##############################
 # Automatically saved options
