Page key binding for RTV
Updated the key bindings for rtv again for Mac OSX so that long posts can be
viewed in a pager.

--- a/macosx/rtv/rtv.cfg
+++ b/macosx/rtv/rtv.cfg
@@ -124,12 +124,12 @@ SAVE = w
 ; Submission page
 ; jkl: added l as additional binding
 SUBMISSION_TOGGLE_COMMENT = l, 0x20
-; jkl: remove o as binding
-SUBMISSION_OPEN_IN_BROWSER = <LF>, <KEY_ENTER>
+; jkl: remove o and KEY_ENTER as bindings, added b as binding
+SUBMISSION_OPEN_IN_BROWSER = f
 SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
-; jkl: remove l as binding
-SUBMISSION_OPEN_IN_PAGER = <KEY_RIGHT>
+; jkl: added KEY_ENTER as additional binding, remove l as binding
+SUBMISSION_OPEN_IN_PAGER = <LF>, <KEY_ENTER>, <KEY_RIGHT>
 SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
