Change search key binding of RTV
Due to inconvenience of the placement for searches in RTV, the key binding has
been changed so that "/" also gives a prompt along with "o" for redundancy.

--- a/macosx/rtv/rtv.cfg
+++ b/macosx/rtv/rtv.cfg
@@ -117,8 +117,8 @@ DELETE = d
 EDIT = e
 INBOX = i
 REFRESH = r, <KEY_F5>
-; jkl: change / to o
-PROMPT = o 
+; jkl: added o as additional binding
+PROMPT = o, /
 SAVE = w
 
 ; Submission page
@@ -133,8 +133,7 @@ SUBMISSION_OPEN_IN_PAGER = <LF>, <KEY_ENTER>, <KEY_RIGHT>
 SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
-; jkl: change f to /
-SUBREDDIT_SEARCH = /
+SUBREDDIT_SEARCH = f
 SUBREDDIT_POST = c
 ; jkl: added l as binding
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
