--- a/macosx/rtv/rtv.cfg
+++ b/macosx/rtv/rtv.cfg
@@ -26,10 +26,10 @@ subreddit = front
 ;subreddit = all
 
 ; Allow rtv to store reddit authentication credentials between sessions.
-persistent = True
+persistent = False
 
 ; Clear any stored credentials when the program starts.
-clear_auth = False
+clear_auth = True
 
 ; Maximum number of opened links that will be saved in the history file.
 history_size = 100
