Clean up rtv key bindings
Changed some of the key bindings for rtv on Mac OSX. Changes are minor and
purely for convenience.

--- a/macosx/rtv/rtv.cfg
+++ b/macosx/rtv/rtv.cfg
@@ -122,14 +122,14 @@ PROMPT = o, /
 SAVE = w
 
 ; Submission page
-; jkl: added l as additional binding
-SUBMISSION_TOGGLE_COMMENT = l, 0x20
+; jkl: added l and right as additional binding
+SUBMISSION_TOGGLE_COMMENT = l, 0x20, <KEY_RIGHT>
 ; jkl: remove o and KEY_ENTER as bindings, added b as binding
 SUBMISSION_OPEN_IN_BROWSER = f
 SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
-; jkl: added KEY_ENTER as additional binding, remove l as binding
-SUBMISSION_OPEN_IN_PAGER = <LF>, <KEY_ENTER>, <KEY_RIGHT>
+; jkl: added KEY_ENTER as additional binding, remove l and right as binding
+SUBMISSION_OPEN_IN_PAGER = <LF>, <KEY_ENTER>
 SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
