--- a/macosx/firefox/profiles.ini
+++ b/macosx/firefox/profiles.ini
@@ -4,5 +4,6 @@ StartWithLastProfile=1
 [Profile0]
 Name=default
 IsRelative=1
-Path=Profiles/default
+Path=Profiles/1z8y28wa.default-1498148942973
+Default=1
 
