Changes for Terminus font bug
Made some changes due to a naming bug in the Terminus font set. Have to
add xos4 to Terminus font call.

--- a/t440s/mpv/_mpv/input.conf
+++ b/t440s/mpv/_mpv/input.conf
@@ -32,3 +32,5 @@ F2 set video-aspect 16/9
 r no-osd cycle-values video-rotate "90" "180" "270" "0"
 - add video-zoom -0.25
 = add video-zoom 0.25
+
+CTRL+D run "/bin/rm" "-v" "${path}"
