Added in a few more FF search engines on Mac OSX
Included a two new search engines to OSX as well as an update to the FF
profiles in accordance to the latest beta FF version.

--- a/macosx/firefox/profiles.ini
+++ b/macosx/firefox/profiles.ini
@@ -4,6 +4,6 @@ StartWithLastProfile=1
 [Profile0]
 Name=default
 IsRelative=1
-Path=Profiles/1z8y28wa.default-1498148942973
+Path=Profiles/tt080ajf.default-1510085938979
 Default=1
 
