Prevent accidental keys in rtv
Some of the keys in rtv are accidentally being pushed during browsing, which
should not be activated due to a lack of login credentials.

--- a/t440s/rtv/rtv.cfg
+++ b/t440s/rtv/rtv.cfg
@@ -110,12 +110,12 @@ PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
 PAGE_TOP = gg
 PAGE_BOTTOM = G
-UPVOTE = a
-DOWNVOTE = z
-LOGIN = u
-DELETE = d
-EDIT = e
-INBOX = i
+UPVOTE = A
+DOWNVOTE = Z
+LOGIN = U
+DELETE = D
+EDIT = E
+INBOX = I
 REFRESH = r, <KEY_F5>
 ; jkl: added o as additional binding
 PROMPT = o, /
