Binding for mpv (T440s)
Altered binding for T440s mpv (included key to copy images for
convenience)

--- a/t440s/mpv/_mpv/input.conf
+++ b/t440s/mpv/_mpv/input.conf
@@ -34,3 +34,4 @@ r no-osd cycle-values video-rotate "90" "180" "270" "0"
 = add video-zoom 0.25
 
 CTRL+D run "/bin/rm" "-v" "${path}"
+CTRL+c run "/bin/cp" "-L" "${path}" "./"
