--- a/x1c6/mpv/_mpv/input.conf
+++ b/x1c6/mpv/_mpv/input.conf
@@ -1,5 +1,5 @@
-h seek -10
-l seek +10
+h seek -5
+l seek +5
 j seek -30
 k seek +30
 H seek -100
@@ -10,8 +10,8 @@ g quit
 ; playlist_next force
 ENTER playlist_next force
 
-a seek -10
-d seek +10
+a seek -5
+d seek +5
 s seek -30
 w seek +30
 A seek -100
@@ -34,4 +34,5 @@ r no-osd cycle-values video-rotate "90" "180" "270" "0"
 = add video-zoom 0.25
 
 CTRL+D run "/bin/rm" "-v" "${path}"
-CTRL+c run "/bin/cp" "-L" "${path}" "./"
+CTRL+C run "/bin/cp" "-L" "${path}" "./"
+CTRL+V run "/bin/mv" "${path}" "../"
