Firefox profile for VirtualBox images
Small automated changes to the configuration of Mozilla Firefox on
VirtualBox images.

--- a/virtualbox/firefox/profiles.ini
+++ b/virtualbox/firefox/profiles.ini
@@ -1,19 +1,23 @@
-[General]
-StartWithLastProfile=1
-
-[Profile0]
-Name=plain
-IsRelative=1
-Path=plain
-
-[Profile1]
-Name=default
-IsRelative=1
-Path=default
+[Install4F96D1932A9F858E]
+Default=stream
 
 [Profile2]
 Name=stream
 IsRelative=1
 Path=stream
 Default=1
+
+[Profile1]
+Name=default
+IsRelative=1
+Path=default
+
+[Profile0]
+Name=plain
+IsRelative=1
+Path=plain
+
+[General]
+StartWithLastProfile=1
+Version=2
 
