Fix terminal encoding (X1C6), minor updates
Environment variables in BASH and X11 were not properly set for
terminals in Thinkpad X1 Carbon Gen 6. Also, minor update to MPV time
steps.

--- a/x1c6/firefox/profiles.ini
+++ b/x1c6/firefox/profiles.ini
@@ -1,19 +1,29 @@
-[General]
-StartWithLastProfile=1
-
-[Profile0]
-Name=plain
+[Profile3]
+Name=default-release
 IsRelative=1
-Path=plain
-
-[Profile1]
-Name=default
-IsRelative=1
-Path=default
+Path=jludm4zp.default-release
 
 [Profile2]
 Name=stream
 IsRelative=1
 Path=stream
 Default=1
+
+[Profile1]
+Name=default
+IsRelative=1
+Path=default
+
+[Profile0]
+Name=plain
+IsRelative=1
+Path=plain
+
+[General]
+StartWithLastProfile=1
+Version=2
+
+[Install6AFDA46A1A8AD48]
+Default=jludm4zp.default-release
+Locked=1
 
