More intense redshift and feh background options
Updated the options for the bg image using feh. Also increased the
effect of redshift in the default herbstluftwm autostart file.

--- a/x1c6/firefox/profiles.ini
+++ b/x1c6/firefox/profiles.ini
@@ -19,11 +19,20 @@ Name=plain
 IsRelative=1
 Path=plain
 
+[Install11457493C5A56847]
+Default=ersyocul.default-default
+Locked=1
+
 [General]
 StartWithLastProfile=1
 Version=2
 
 [Install6AFDA46A1A8AD48]
-Default=jludm4zp.default-release
+Default=plain
 Locked=1
+
+[Profile4]
+Name=default-default
+IsRelative=1
+Path=ersyocul.default-default
 
