Update time steps and rotation of MPV
Minor change to some of the input configuration for the MPV application
for shorter time steps and better rotation options.

--- a/x1c6/mpv/_mpv/input.conf
+++ b/x1c6/mpv/_mpv/input.conf
@@ -1,23 +1,23 @@
-h seek -5
-l seek +5
-j seek -15
-k seek +15
-H seek -80
-L seek +80
+h seek -3
+l seek +3
+j seek -12
+k seek +12
+H seek -60
+L seek +60
 J seek -300
 K seek +300
 g quit
 ; playlist_next force
 ENTER playlist_next force
 
-a seek -5
-d seek +5
-s seek -15
-w seek +15
-A seek -80
-D seek +80
-S seek -300
-W seek +300
+a seek -3
+d seek +3
+s seek -12
+w seek +12
+A seek -60
+D seek +60
+S seek -200
+W seek +200
 q quit
 e playlist_next force
 
@@ -29,7 +29,9 @@ CTRL+w seek +1000
 F1 set video-aspect 4/3
 F2 set video-aspect 16/9
 
-r no-osd cycle-values video-rotate "90" "180" "270" "0"
+R no-osd cycle-values video-rotate "90" "180" "270" "0"
+r cycle-values video-aspect "16:9" "4:3" "-1"
+
 - add video-zoom -0.25
 = add video-zoom 0.25
 
