Fixed inputs in mpv and updated extensions in vifm
Previously, the input.conf for mpv did not account for arrows, so that
has been corrected here. In addition, the extensions for vifm has been
updated.

--- a/x1c6/mpv/_mpv/input.conf
+++ b/x1c6/mpv/_mpv/input.conf
@@ -4,8 +4,8 @@ j seek -12
 k seek +12
 H seek -60
 L seek +60
-J seek -300
-K seek +300
+J seek -200
+K seek +200
 g quit
 ; playlist_next force
 ENTER playlist_next force
@@ -21,10 +21,27 @@ W seek +200
 q quit
 e playlist_next force
 
+LEFT seek -3
+RIGHT seek +3
+DOWN seek -12
+UP seek +12
+SHIFT+LEFT seek -60
+SHIFT+RIGHT seek +60
+SHIFT+DOWN seek -200
+SHIFT+UP seek +200
+
 CTRL+a seek -500
 CTRL+d seek +500
 CTRL+s seek -1000
 CTRL+w seek +1000
+CTRL+h seek -500
+CTRL+l seek +500
+CTRL+j seek -1000
+CTRL+k seek +1000
+CTRL+LEFT seek -500
+CTRL+RIGHT seek +500
+CTRL+DOWN seek -1000
+CTRL+UP seek +1000
 
 F1 set video-aspect 4/3
 F2 set video-aspect 16/9
